--- a/actualizacion-lugares/detalle.html
+++ b/actualizacion-lugares/detalle.html
@@ -11,6 +11,6 @@
   <div id="detalle-pagina"></div>
 
   <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
-  <script src="/detalle.js"></script>
+  <script src="detalle.js"></script>
 </body>
 </html>
