--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
         </div>
     </div>
     <div class="card">
-        <img src="/image.png" alt="">
+        <img src="./fondo-lugares.PNG" alt="">
         <div class="texto">
             <h3>lugares Turisticos</h3>
             <a class="btn" href="/actualizacion-lugares/index.html" target="_blank">Ver Proyecto</a>
