--- a/index.html
+++ b/index.html
@@ -45,11 +45,20 @@
             <a class="btn" href="/calculadora/index.html" target="_blank">Ver Proyecto</a>
         </div>
     </div>
+
     <div class="card">
         <img src="./fondo-lugares.PNG" alt="">
         <div class="texto">
             <h3>lugares Turisticos</h3>
             <a class="btn" href="/actualizacion-lugares/index.html" target="_blank">Ver Proyecto</a>
+        </div>
+    </div>
+      
+    <div class="card">
+        <img src="./Captura de pantalla 2025-09-02 164211.png" alt="">
+        <div class="texto">
+            <h3>Gestion Reservas</h3>
+            <a class="btn" href="/gestion de reservas/index.html" target="_blank">Ver Proyecto</a>
         </div>
     </div>
 </div>
