--- a/gestion de reservas/index.html
+++ b/gestion de reservas/index.html
@@ -386,11 +386,14 @@
     <!-- Modales -->
     <!-- Modal para agregar/editar mesa -->
     <div id="agregarMesa" class="fixed inset-0 z-50 hidden flex items-center justify-center p-4 bg-black bg-opacity-50">
-        <div class="relative bg-white rounded-xl shadow-lg w-full max-w-md">
+        <!-- contenedor: columna, límite de altura y overflow oculto -->
+        <div class="relative bg-white rounded-xl shadow-lg w-full max-w-md max-h-[90vh] flex flex-col overflow-hidden">
             <div class="header rounded-t-xl">
                 <h2 id="am-titulo" class="text-center font-semibold text-lg">Agregar Mesa</h2>
             </div>
-            <div class="p-5 space-y-4">
+
+            <!-- contenido: permite scroll interno -->
+            <div class="p-5 space-y-4 overflow-auto flex-1">
                 <div>
                     <label class="block text-sm font-medium text-gray-700 mb-1">Nombre De La Mesa *</label>
                     <input id="am-nombre" type="text" class="w-full border rounded-lg px-3 py-2 focus:ring-emerald-500 focus:border-emerald-500">
@@ -406,18 +409,21 @@
                     <input id="am-ubicacion" type="text" class="w-full border rounded-lg px-3 py-2 focus:ring-emerald-500 focus:border-emerald-500" placeholder="EJ: Jardín">
                     <span id="error-ubicacion" class="text-red-600 text-sm hidden"></span>
                 </div>
-                <div>
-                    <label class="block text-sm font-medium text-gray-700 mb-1">Estado</label>
-                    <select id="am-estado" class="w-full border rounded-lg px-3 py-2 focus:ring-emerald-500 focus:border-emerald-500">
-                        <option value="disponible">Disponible</option>
-                        <option value="ocupada">Ocupada</option>
-                        <option value="deshabilitada">Deshabilitada</option>
-                    </select>
-                </div>
+                
+<div id="am-estado-wrapper" class="hidden">
+        <label class="block text-sm font-medium text-gray-700 mb-1">Estado</label>
+        <select id="am-estado" class="w-full border rounded-lg px-3 py-2">
+            <option value="disponible">Disponible</option>
+            <option value="deshabilitada">Deshabilitada</option>
+        </select>
+        <p class="text-sm text-gray-500 mt-1">El estado "Ocupada" se gestiona automáticamente por las reservas.</p>
+    </div>
             </div>
-            <div class="p-5 border-t flex gap-3 justify-end">
-                <button id="am-cancelar" class="btn-secondary">Cancelar</button>
-                <button id="am-guardar" class="btn-primary">Guardar</button>
+            
+            <!-- footer: fijo dentro del modal -->
+            <div class="p-5 border-t flex gap-3 justify-end flex-shrink-0">
+                <button id="am-cancelar" type="button" class="btn-secondary">Cancelar</button>
+                <button id="am-guardar" type="button" class="btn-primary">Guardar</button>
             </div>
         </div>
     </div>
@@ -429,7 +435,7 @@
                 <h2 class="text-center font-semibold text-lg">Detalle de la mesa</h2>
             </div>
             <div class="p-5 space-y-3">
-                <p class="flex justify-between"><span class="font-medium text-gray-700">ID:</span><span id="dm-id" class="text-gray-900"></span></p>
+               <!-- <p class="flex justify-between"><span class="font-medium text-gray-700">ID:</span><span id="dm-id" class="text-gray-900"></span></p>-->
                 <p class="flex justify-between"><span class="font-medium text-gray-700">Nombre:</span> <span id="dm-nombre" class="text-gray-900"></span></p>
                 <p class="flex justify-between"><span class="font-medium text-gray-700">Capacidad</span><span id="dm-capacidad" class="text-gray-900"></span></p>
                 <p class="flex justify-between"><span class="font-medium text-gray-700">Ubicación</span><span id="dm-ubicacion" class="text-gray-900"></span></p>
@@ -448,11 +454,13 @@
 
     <!-- Modal de reserva -->
     <div id="modalReserva" class="fixed inset-0 z-50 hidden flex items-center justify-center p-4 bg-black bg-opacity-50">
-        <div class="relative bg-white rounded-xl shadow-lg w-full max-w-md max-h-[90vh] overflow-y-auto">
+        <div class="relative bg-white rounded-xl shadow-lg w-full max-w-md max-h-[90vh] flex flex-col overflow-hidden">
             <div class="header rounded-t-xl">
                 <h2 id="tituloModalReserva" class="text-center font-semibold text-lg">Nueva Reserva</h2>
             </div>
-            <div class="p-5 space-y-4">
+
+            <div class="p-5 space-y-4 overflow-auto flex-1">
+                <!-- formulario (mantener existente) -->
                 <div>
                     <label class="block text-sm font-medium text-gray-700 mb-1">Nombre Del Cliente *</label>
                     <input id="inputNombreReserva" type="text" class="w-full border rounded-lg px-3 py-2 focus:ring-emerald-500 focus:border-emerald-500">
@@ -470,11 +478,13 @@
                 </div>
                 <div>
                     <label class="block text-sm font-medium text-gray-700 mb-1">Hora de Inicio *</label>
-                    <input id="inputHoraInicioReserva" type="time" min="08:00" max="20:00" class="w-full border rounded-lg px-3 py-2 focus:ring-emerald-500 focus:border-emerald-500">
+                    <input id="inputHoraInicioReserva" type="time" min="08:00" max="23:00" class="w-full border rounded-lg px-3 py-2 focus:ring-emerald-500 focus:border-emerald-500">
                     <span id="errorHoraInicioReserva" class="text-red-600 text-sm hidden"></span>
                     <div class="duracion-info">
-                        <i class="fas fa-info-circle mr-1"></i> Horario de atención: 8:00 AM - 8:00 PM
+                        <i class="fas fa-info-circle mr-1"></i> Horario de atención: 8:00 AM - 11:00 PM
                     </div>
+
+   
                 </div>
                 <div>
                     <label class="block text-sm font-medium text-gray-700 mb-1">Ocasión Especial *</label>
@@ -510,6 +520,17 @@
                     <label class="block text-sm font-medium text-gray-700 mb-1">Notas Adicionales</label>
                     <textarea id="textareaNotasReserva" class="w-full border rounded-lg px-3 py-2 focus:ring-emerald-500 focus:border-emerald-500" rows="3"></textarea>
                 </div>
+
+                <div id="rs-estado-wrapper" class="hidden">
+    <label class="block text-sm font-medium text-gray-700 mb-1">Estado de la reserva</label>
+    <select id="selectEstadoReserva" class="w-full border rounded-lg px-3 py-2">
+        <option value="Pendiente">Pendiente</option>
+        <option value="Confirmada">Confirmada</option>
+        <option value="Cancelada">Cancelada</option>
+        <option value="No Show">No Show</option>
+    </select>
+    <p class="text-sm text-gray-500 mt-1">Cambiar estado (Confirmada / Cancelada / No Show). El estado Finalizada se asigna al pagar.</p>
+</div>
             </div>
             <div class="p-5 border-t flex gap-3 justify-end">
                 <button id="btnCancelarReserva" class="btn-secondary">Cancelar</button>
