--- a/juego_medieval/index.html
+++ b/juego_medieval/index.html
@@ -2,22 +2,22 @@
 <html lang="es">
 <head>
 <meta charset="UTF-8" />
-<title>Video de fondo — Prueba</title>
+<title>juego de oz </title>
 
-<!-- Fuentes -->
+
 <link href="https://fonts.googleapis.com/css2?family=Cinzel:wght@700;900&family=Cinzel+Decorative:wght@700;900&family=Alegreya+SC:wght@700&family=IM+Fell+English:ital@0;1&display=swap" rel="stylesheet">
-
+ <link rel="icon" href="icono.png" type="image/png" />
 <style>
   html, body { height: 100%; margin: 0; }
   body { display: grid; place-items: center; background: #000; color: #fff; }
 
-  /* Video full-screen detrás */
+
   .bg-video{
     position: fixed; inset: 0; z-index: -1;
     width: 100%; height: 100%; object-fit: cover;
   }
 
-  /* Contenedor central encima del pergamino del video */
+  
   .ui{
     width: min(100%, 980px);
     margin: 0 auto;
@@ -27,23 +27,18 @@
     justify-items: center;
   }
 
-  /* Título (se queda tu misma fuente/estilo) */
-  .titulo-medieval-epico{
-    font-size: 60px;
-    font-family: "Cinzel Decorative","Cinzel",serif;
-    font-weight: 900;
-    text-transform: uppercase;
-    letter-spacing: .035em;
-    background: linear-gradient(#e95f04 0%, #b56707 55%, #5d4027 100%);
-    -webkit-background-clip: text; background-clip: text; color: transparent;
-    -webkit-text-stroke: 0.9px #2f281f;
-    text-shadow: 0 .5px 0 rgba(251,182,7,.53), 0 2px 4px rgba(0,0,0,.45), 0 8px 18px rgba(0,0,0,.35);
-    paint-order: stroke fill;
-    margin: 0;
-    text-align: center;
-  }
 
-  /* Botón medieval base */
+  
+.logo-titulo{
+  display: flex;
+padding-bottom: 0;
+  
+}
+.logo-titulo:hover{
+  filter: brightness(1.05); transform: translateY(-1px);
+}
+
+
   :root{ --metal-1:#6f665c; --metal-2:#2a231c; --edge-light:#fdf6e7; }
   .btn-medieval{
     --pad-x: 18px; --pad-y: 8px;
@@ -78,14 +73,12 @@
   .btn-medieval:hover{ filter: brightness(1.05); transform: translateY(-1px); }
   .btn-medieval:active{ transform: translateY(1px); }
 
-  /* Tamaño pequeño para todos los botones */
   .btn-sm{
     --pad-x: 14px; --pad-y: 7px;
     font-size: 16px;
     border-radius: 9px;
   }
 
-  /* Panel de descripción tipo pergamino */
   .desc-panel{
     width: min(100%, 820px);
     padding: 18px 22px;
@@ -99,48 +92,68 @@
   }
   .desc-text{
     margin: 0;
-    color: #5a3b1a;                 /* marrón */
-    font-family: "IM Fell English","Alegreya SC",serif;  /* escritura antigua */
+    color: #5a3b1a;                 
+    font-family: "IM Fell English","Alegreya SC",serif;  
     font-size: 20px;
     line-height: 1.45;
     text-wrap: pretty;
   }
 
-  /* Cursor parpadeante para el typewriter */
+  
   .desc-text.typing::after{
     content: "▌"; margin-left: 4px; opacity:.8;
     animation: blink 1s steps(1) infinite;
   }
   @keyframes blink { 50% { opacity: 0; } }
 
-  /* Filas de layout: top (desc), cuerpo (texto), música a la izquierda, navegación al final */
+ 
   .row-top{ width:100%; display:flex; justify-content:center; }
   .row-music{ width:100%; display:flex; justify-content:center; }
   .nav-links{ width:100%; display:flex; gap:12px; justify-content:center; flex-wrap:wrap; }
+
+
+.boton-pergamino{
+  height:70px ;
+  width:140px ;
+}
+
+
+.boton-pergamino:hover{
+filter: brightness(1.05); transform: translateY(-1px);
+
+}
+
+
+
+
 </style>
 </head>
 <body>
 
-  <!-- VIDEO DE FONDO -->
+ 
   <video class="bg-video" autoplay muted loop playsinline>
     <source src="Generated File October 01, 2025 - 12_26PM.mp4" type="video/mp4">
   </video>
 
-  <!-- UI central -->
+  
   <div class="ui">
-    <h1 class="titulo-medieval-epico">juego <span class="t-lanza">de </span> oz</h1>
+    <img src="logo-titulo-removebg-preview.png" alt="logo-titulo" class="logo-titulo">
 
-    <!-- Botón Descripción: ARRIBA, CENTRADO y PEQUEÑO -->
+
+
+
+    <!--<img src="pergamino_fondo-removebg-preview.png" alt="" srcset="" class="boton-pergamino"> -->
+    
     <div class="row-top">
       <button id="btn-desc" class="btn-medieval btn-sm">Descripción</button>
     </div>
 
-    <!-- Texto de Descripción -->
+   
     <div class="desc-panel">
       <p id="desc-text" class="desc-text"></p>
     </div>
 
-    <!-- Botón Música: ABAJO DEL TEXTO, IZQUIERDA -->
+   
     <div class="row-music">
       <button id="toggle-bgm" class="btn-medieval btn-sm" aria-pressed="false" title="Música">Música: OFF</button>
     </div>
@@ -155,13 +168,13 @@
   <!-- AUDIO DE FONDO -->
   <audio id="bgm" loop preload="auto">
     <source src="Medieval Music – Cobblestone Village(MP3_160K).mp3" type="audio/mpeg">
-    <!-- <source src="musica_inicio.ogg" type="audio/ogg"> -->
+  
   </audio>
 
 <script>
-  /* ========= Configura aquí tu texto ========= */
+  
   const DESCRIPCION = "Forjado en los salones del pergamino eterno, este juego convoca a los héroes a cruzar tierras antiguas, jurar lealtades y reclamar la luz. Tu leyenda empieza en estas páginas.";
-  /* ========================================== */
+
 
   const btnDesc = document.getElementById('btn-desc');
   const out     = document.getElementById('desc-text');
@@ -183,7 +196,7 @@
     }, speed);
   }
 
-  // Botón Descripción: si está escribiendo, “salta” al final; si no, comienza.
+
   btnDesc.addEventListener('click', () => {
     if (timer){
       clearInterval(timer); timer = null;
@@ -194,7 +207,7 @@
     }
   });
 
-  // Música ON/OFF
+ 
   const bgm = document.getElementById('bgm');
   const btnMusic = document.getElementById('toggle-bgm');
 
